--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <div class="container header-inner">
         <div class="logo">
-          <img src="/img/rrr.png" alt="Meta Record Label" />
+          <img src="img/rrr.png" alt="Meta Record Label" />
         </div>
 
         <nav class="nav">
@@ -24,22 +24,22 @@
         <div class="social">
           <a href="https://x.com/meta" target="_blank">
             <button class="icon-btn">
-              <img class="gg1" src="/img/Frame.png" alt="Twitter" />
+              <img class="gg1" src="img/Frame.png" alt="Twitter" />
             </button>
           </a>
           <a href="https://discord.gg/hmCJDveQ" target="_blank">
             <button class="icon-btn">
-              <img class="gg1" src="/img/Frame (1).png" alt="Discord" />
+              <img class="gg1" src="img/Frame (1).png" alt="Discord" />
             </button>
           </a>
           <a href="https://www.youtube.com/meta" target="_blank">
             <button class="icon-btn">
-              <img class="gg1" src="/img/Frame (2).png" alt="YouTube" />
+              <img class="gg1" src="img/Frame (2).png" alt="YouTube" />
             </button>
           </a>
           <a href="https://t.me/MetaQuestRUS" target="_blank">
             <button class="icon-btn">
-              <img class="gg1" src="/img/Frame (3).png" alt="Telegram" />
+              <img class="gg1" src="img/Frame (3).png" alt="Telegram" />
             </button>
           </a>
         </div>
@@ -70,7 +70,7 @@
           <a class="btn primary" href="#nft">Learn More</a>
         </div>
         <div class="hero-right">
-          <img src="/img/ep.png" alt="Wave" class="hero-img" />
+          <img src="img/ep.png" alt="Wave" class="hero-img" />
         </div>
       </div>
     </section>
@@ -79,7 +79,7 @@
       <div class="container nft-grid">
         <div class="nft-left">
           <h3 class="section-title">WAVE NFT<br />COLLECTION OF 777</h3>
-          <img src="/img/IMAGE (3).png" alt="NFT" class="nft-img" />
+          <img src="img/IMAGE (3).png" alt="NFT" class="nft-img" />
         </div>
         <div class="nft-right">
           <div class="glass">
@@ -95,42 +95,42 @@
     </section>
 
     <div class="full-width-img">
-      <img src="/img/arttt.png" alt="Artwork" />
+      <img src="img/arttt.png" alt="Artwork" />
     </div>
 
     <section class="section fade-up" id="artists">
       <div class="container">
         <div class="artists-grid">
           <div class="artist">
-            <img src="/img/Frame (6).png" alt="Mark Popson" />
+            <img src="img/Frame (6).png" alt="Mark Popson" />
             <div class="artist-name">Mark Popson</div>
           </div>
           <div class="artist">
-            <img src="/img/Frame (7).png" alt="Pete Bentz" />
+            <img src="img/Frame (7).png" alt="Pete Bentz" />
             <div class="artist-name">Pete Bentz</div>
           </div>
           <div class="artist">
-            <img src="/img/Frame (8).png" alt="Daniela Youth" />
+            <img src="img/Frame (8).png" alt="Daniela Youth" />
             <div class="artist-name">Daniela Youth</div>
           </div>
           <div class="artist">
-            <img src="/img/Frame (9).png" alt="Rosen Garo" />
+            <img src="img/Frame (9).png" alt="Rosen Garo" />
             <div class="artist-name">Rosen Garo</div>
           </div>
           <div class="artist">
-            <img src="/img/Frame (10).png" alt="Tonya" />
+            <img src="img/Frame (10).png" alt="Tonya" />
             <div class="artist-name">Tonya</div>
           </div>
           <div class="artist">
-            <img src="/img/Frame (11).png" alt="Ivor" />
+            <img src="img/Frame (11).png" alt="Ivor" />
             <div class="artist-name">Ivor</div>
           </div>
           <div class="artist">
-            <img src="/img/Frame (12).png" alt="Somee Petit" />
+            <img src="img/Frame (12).png" alt="Somee Petit" />
             <div class="artist-name">Somee Petit</div>
           </div>
           <div class="artist">
-            <img src="/img/photo_2025-10-14_23-22-00.jpg" alt="Soft Cswidezz" />
+            <img src="img/photo_2025-10-14_23-22-00.jpg" alt="Soft Cswidezz" />
             <div class="artist-name">Soft Cswidezz</div>
           </div>
         </div>
@@ -151,7 +151,7 @@
             <div class="tab-panel active" id="founders">
               <div class="card-content">
                 <div class="panel-left">
-                  <img src="/img/IMAGE (4).png" alt="Our founders" />
+                  <img src="img/IMAGE (4).png" alt="Our founders" />
                 </div>
                 <div class="panel-right">
                   <p>
@@ -173,7 +173,7 @@
     </section>
 
     <div class="full-width-img">
-      <img src="/img/ltvkf2.png" alt="Artwork" />
+      <img src="img/ltvkf2.png" alt="Artwork" />
     </div>
 
     <section class="roadmap fade-up">
@@ -199,7 +199,7 @@
               </li>
             </ul>
             <div class="card-image">
-              <img src="/img/first.png" alt="Phase 1" />
+              <img src="img/first.png" alt="Phase 1" />
             </div>
           </div>
         </div>
@@ -248,7 +248,7 @@
               </li>
             </ul>
             <div class="card-image">
-              <img src="/img/last.png" alt="Phase 3" />
+              <img src="img/last.png" alt="Phase 3" />
             </div>
           </div>
         </div>
@@ -257,7 +257,7 @@
 
     <div class="container">
       <section class="logos-section">
-        <img src="/img/wrt.png" alt="Partners" class="responsive-img" />
+        <img src="img/wrt.png" alt="Partners" class="responsive-img" />
       </section>
 
       <div class="divider"></div>
@@ -267,7 +267,7 @@
           <h3>FREQUENTLY ASKED QUESTIONS</h3>
           <img
             class="nft-img"
-            src="/img/qwer.png"
+            src="img/qwer.png"
             alt="FAQ Illustration"
             class="responsive-img"
           />
@@ -317,29 +317,29 @@
     </div>
 
     <div class="full-width-img">
-      <img src="/img/rep.png" alt="Artwork" />
+      <img src="img/rep.png" alt="Artwork" />
     </div>
 
     <section class="section fade-up" id="team">
       <div class="container">
         <div class="artists-grid">
           <div class="artist">
-            <img src="/img/Frame (13).png" alt="Shaky Lake" />
+            <img src="img/Frame (13).png" alt="Shaky Lake" />
             <div class="artist-name">Shaky Lake</div>
           </div>
           <div class="artist">
-            <img src="/img/Frame (15).png" alt="Vanita Do" />
+            <img src="img/Frame (15).png" alt="Vanita Do" />
             <div class="artist-name">Vanita Do</div>
           </div>
           <div class="artist">
             <img
-              src="/img/photo_2025-10-14_23-39-45.jpg"
+              src="img/photo_2025-10-14_23-39-45.jpg"
               alt="Socuide & Schked"
             />
             <div class="artist-name">tal0l1k & csw1deezz</div>
           </div>
           <div class="artist">
-            <img src="/img/devka.png" alt="Baky Hike" />
+            <img src="img/devka.png" alt="Baky Hike" />
             <div class="artist-name">Baky Hike</div>
           </div>
         </div>
@@ -364,7 +364,7 @@
               class="btn discord-btn"
             >
               <img
-                src="/img/Frame (1).png"
+                src="img/Frame (1).png"
                 alt="Discord"
                 class="discord-icon"
               />
@@ -377,7 +377,7 @@
                 <img
                   class="nft-img"
                   style="width: 300px"
-                  src="/img/bck.png"
+                  src="img/bck.png"
                   alt=""
                 />
               </figure>
@@ -391,7 +391,7 @@
         <div class="footer-content">
           <div class="footer-brand">
             <div class="footer-logo">
-              <img class="nft-img" src="/img/rrr.png" alt="Meta Record Label" />
+              <img class="nft-img" src="img/rrr.png" alt="Meta Record Label" />
             </div>
             <p class="footer-tagline">
               ©2025 Meta Record Label.<br />All rights reserved.
@@ -438,21 +438,21 @@
                 target="_blank"
                 class="social-link"
               >
-                <img class="gg1" src="/img/Frame (1).png" alt="Discord" />
+                <img class="gg1" src="img/Frame (1).png" alt="Discord" />
               </a>
               <a
                 href="https://www.youtube.com/meta"
                 target="_blank"
                 class="social-link"
               >
-                <img class="gg1" src="/img/Frame (2).png" alt="YouTube" />
+                <img class="gg1" src="img/Frame (2).png" alt="YouTube" />
               </a>
               <a
                 href="https://t.me/MetaQuestRUS"
                 target="_blank"
                 class="social-link"
               >
-                <img class="gg1" src="/img/Frame (3).png" alt="Telegram" />
+                <img class="gg1" src="img/Frame (3).png" alt="Telegram" />
               </a>
             </div>
 
@@ -481,3 +481,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
