--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
               </li>
             </ul>
             <div class="card-image">
-              <img src="/img/prev.png" alt="Phase 2" />
+              <img src="img/prev.png" alt="Phase 2" />
             </div>
           </div>
         </div>
@@ -431,7 +431,7 @@
             <h4>Join Community</h4>
             <div class="social-links">
               <a href="https://x.com/meta" target="_blank" class="social-link">
-                <img class="gg1" src="/img/Frame.png" alt="Twitter" />
+                <img class="gg1" src="img/Frame.png" alt="Twitter" />
               </a>
               <a
                 href="https://discord.gg/hmCJDveQ"
@@ -481,4 +481,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
